# omnisolver-pt

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: quality_checks.yml
omnisolver/pt/: __init__.py  _numba_helpers.py  algorithm.py  model.py  pt.yml  replica.py  sampler.py  testing.py  tracking.py
tests/: test_algorithm.py  test_ising_model.py  test_plugin.py  test_pt_utilities.py  test_replica.py  test_sampler.py  test_tracking.py
