[metadata]
name = omnisolver-pt
description = Parallel-tempering solver compatible with omnisolver.
long_description = file: README.md
long_description_content_type = text/markdown
author = Konrad Jałowiecki
author_email = dexter2206@gmail.com
license = Apache-2.0
url = https://github.com/euro-hpc-pl/omnisolver-pt
classifiers =
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find_namespace:
python_requires = >= 3.7
install_requires =
    omnisolver >= 0.0.1
    numba >= 0.53.1
    pluggy >= 0.13.1
    numpy >= 1.19.4
include_package_data = true

[options.extras_require]
test = pytest>=6.1.2; pytest-cov>=2.12.1

[options.entry_points]

[options.packages.find]
exclude = tests

[options.package_data]
omnisolver.pt = "pt.yml"

[coverage:run]
relative_files = True
